fix: center align items in FeaturesSection for better layout

--- a/src/components/FeaturesSection/FeaturesSection.module.scss
+++ b/src/components/FeaturesSection/FeaturesSection.module.scss
@@ -41,6 +41,7 @@
 .featuresSection {
   display: flex;
   justify-content: center;
+  align-items: center;
   // padding: 192px 0 100px;
   width: 100%;
   font-size: 16px;
